# secureops

./: .dockerignore  .gitignore  AGENTS.md  BETA_AUDIT.md  CHANGELOG.md  CODEBASE_PROGRESS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEFERRED.md  FUTURE.md  Justfile  LAUNCH_REPORT.md  LICENSE  PRODUCT.md  PROMPT.md  README.md  REPORT.md  SECURITY.md  deny.toml  mkdocs.yml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  chaos.yml  ci.yml  pages.yml  release.yml  security-scan.yml  supply-chain.yml
crates/secureops-api/: Cargo.toml
crates/secureops-api/migrations/: 001_licenses.sql  002_clouds.sql  003_assets_identities.sql  004_findings.sql  005_remediations_feedback.sql  006_usage_audit.sql  007_rls_roles_retention.sql
crates/secureops-api/src/: auth.rs  authz.rs  compliance.rs  error.rs  evidence.rs  export.rs  health.rs  intel.rs  lib.rs  license.rs  main.rs  metrics.rs  models.rs  ratelimit.rs  redis_queue.rs  router.rs  routes.rs  sso.rs  store.rs  ws.rs
crates/secureops-api/src/store/: pg.rs
crates/secureops-api/tests/: api_http.rs  chaos_http.rs  enterprise_http.rs  intel_http.rs  pg_integration.rs  spa_http.rs
crates/secureops-auditlog/: Cargo.toml
crates/secureops-auditlog/src/: lib.rs
crates/secureops-bench/: Cargo.toml
crates/secureops-bench/benches/: graph_bfs.rs  rl_ranking.rs  tokenbudget.rs
crates/secureops-bench/src/: lib.rs
crates/secureops-bpf/: Cargo.toml
crates/secureops-bpf/src/: chain.rs  lib.rs  seccomp.rs
crates/secureops-bughunt/: Cargo.toml
crates/secureops-bughunt/src/: lib.rs  providers.rs
crates/secureops-chaos/: Cargo.toml
crates/secureops-chaos/src/: lib.rs
crates/secureops-checks/: Cargo.toml
crates/secureops-checks/src/: access_control.rs  cost_exposure.rs  credentials.rs  execution.rs  gateway.rs  ioc.rs  lib.rs  memory_integrity.rs  mock.rs  multi_framework.rs  patterns.rs  supply_chain.rs
crates/secureops-cli/: Cargo.toml
crates/secureops-cli/src/: console.rs  main.rs
crates/secureops-core/: Cargo.toml
crates/secureops-core/src/: check.rs  config.rs  context.rs  ioc.rs  lib.rs  patterns.rs  runtime.rs  scoring.rs  types.rs  util.rs
crates/secureops-crypto/: Cargo.toml
crates/secureops-crypto/src/: lib.rs  machinekey.rs
crates/secureops-daemon/: Cargo.toml
crates/secureops-daemon/src/: bpf_wire.rs  main.rs
crates/secureops-fs/: Cargo.toml
crates/secureops-fs/src/: behavioral.rs  killswitch.rs  lib.rs
crates/secureops-graph/: Cargo.toml
crates/secureops-graph/benches/: attack_paths.rs
crates/secureops-graph/src/: lib.rs  neo4j.rs
crates/secureops-harden/: Cargo.toml
crates/secureops-harden/src/: config_hardening.rs  credential_hardening.rs  docker_hardening.rs  gateway_hardening.rs  lib.rs  network_hardening.rs
crates/secureops-intel/: Cargo.toml
crates/secureops-intel/src/: baseline.rs  lib.rs
crates/secureops-ipc/: Cargo.toml
crates/secureops-ipc/src/: lib.rs
crates/secureops-license-server/: Cargo.toml
crates/secureops-license-server/src/: lib.rs  main.rs
crates/secureops-monitors/: Cargo.toml
crates/secureops-monitors/src/: cost.rs  credential.rs  lib.rs  memory_integrity.rs  skill_scanner.rs
crates/secureops-napi/: Cargo.toml
crates/secureops-napi/src/: lib.rs  napi_surface.rs  plugin.rs
crates/secureops-policy/: Cargo.toml
crates/secureops-policy/src/: lib.rs
crates/secureops-proxy/: Cargo.toml
crates/secureops-proxy/src/: lib.rs
crates/secureops-rl/: Cargo.toml
crates/secureops-rl/src/: lib.rs
crates/secureops-sandbox/: Cargo.toml
crates/secureops-sandbox/src/: lib.rs
crates/secureops-scanner/: Cargo.toml
crates/secureops-scanner/src/: aws.rs  aws_rules.rs  lib.rs  main.rs
crates/secureops-selfheal/: Cargo.toml
crates/secureops-selfheal/src/: aws.rs  azure.rs  gcp.rs  lib.rs
crates/secureops-tokenbudget/: Cargo.toml
crates/secureops-tokenbudget/benches/: pack.rs
crates/secureops-tokenbudget/src/: lib.rs
deploy/docker/: .dockerignore  .env.example  Dockerfile  docker-compose.platform.yml  docker-compose.yml  otel-collector.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/charts/bpf-agent/: Chart.yaml  values.yaml
deploy/helm/charts/bpf-agent/templates/: daemonset.yaml
deploy/helm/charts/neo4j/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  networkpolicy.yaml  pdb.yaml  serviceaccount.yaml
deploy/k8s/: configmap-openclaw.yaml  cronjob-audit.yaml  deployment-daemon.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  serviceaccount.yaml
deploy/k8s/policy/: kyverno-baseline.yaml
docs/: DEPLOY_AWS_K8S.md  LOCAL_AND_AWS_READONLY.md  RUNNING.md  api.md  architecture.md  deploy-aws.md  deploy-azure.md  deploy-gcp.md  dr.md  index.html  index.md  license.md  pen-test-checklist.md  playbooks.md  rl-feedback.md  tls-and-otlp.md
ebpf/: Cargo.toml
ebpf/src/: main.rs
playbooks/: README.md  azure-nsg-open-rdp.yaml  enable-cloudtrail.yaml  gcs-public-bucket.yaml  k8s-privileged-pod.yaml  s3-public-acl.yaml  sg-open-ssh-world.yaml
scripts/: backup.sh  build-ebpf.sh  build-napi.sh  release.sh  rename-repo.sh  restore.sh  ts-faithfulness-check.mjs
site/: index.html  package-lock.json  package.json  vite.config.ts
site/_ds/wooak-design-system-8f397fde-8385-4531-9f29-83d01d526f1d/: README.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  colors_and_type.css
site/secureops/: App.jsx  secureops.css  so-motion.jsx  so-reveal.jsx  so-sections-bottom.jsx  so-sections-mid.jsx  so-sections-top.jsx
site/src/: App.tsx  index.css
web/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  api.test.ts  api.ts  components.tsx  graphLayout.test.ts  graphLayout.ts  index.css  pages.tsx  remediationHints.ts  setup.ts  wizard.tsx
web/tests/: live-license.spec.ts  wizard.spec.ts
(+4 files in other folders)
