# SecureOps - Rust workspace
#
# Migration of the @aryasoni98/secureops TypeScript tool (v2.2.0) to Rust,
# structured as the three-trust-ring / PDP-PEP architecture described in
# PRODUCT.md. All 16 crates are implemented (no `todo!()` stubs); the JSON
# wire contract in `secureops-core` stays byte-compatible with the TS tool.
# Linux-only enforcement (eBPF kernel PEP) is feature/platform gated.

[workspace]
resolver = "2"
members = [
    # ---- Rings 0–1 + shared core (blueprint Phases 1–3) ----
    "crates/secureops-core",     # types, Check/AuditContext traits, scoring - no I/O (IMPLEMENTED)
    "crates/secureops-checks",   # one Check impl per audit* fn
    "crates/secureops-fs",       # tokio::fs AuditContext + localhost port probe
    "crates/secureops-intel",    # signed IOC feed, aho-corasick/strsim, tree-sitter scan
    "crates/secureops-crypto",   # aes-gcm + argon2 + zeroize + keyring, v1-readable
    "crates/secureops-harden",   # harden + rollback: 5 config-mutating modules (B.3)
    "crates/secureops-monitors", # tokio monitors, AlertBus, sqlite
    "crates/secureops-cli",      # clap binary
    "crates/secureops-napi",     # .node addon for the TS shim
    # ---- Ring 2 enforcement (blueprint Phase 4) ----
    "crates/secureops-ipc",      # unix-socket JSON-RPC + SO_PEERCRED auth
    "crates/secureops-policy",   # PDP: regorus/cedar eval, hot-reload, decision cache
    "crates/secureops-proxy",    # egress PEP: forward proxy + DNS sinkhole, fail-closed
    "crates/secureops-bpf",      # kernel PEP: aya loader + CO-RE; ES-framework fallback
    "crates/secureops-sandbox",  # execution PEP: wasmtime host, WASI grants, fuel/epoch
    "crates/secureops-auditlog", # append-only hash chain + ed25519 + optional anchor
    "crates/secureops-daemon",   # privileged binary wiring PDP + PEPs + AlertBus + auditlog
    # ---- Platform services (blueprint Phase 5) ----
    "crates/secureops-api",      # axum HTTP API: license/auth/Cedar/WS + Postgres/Redis/S3 store
    "crates/secureops-scanner",  # scan-job worker: BRPOP from Redis → Collector → Store.insert_finding
    # ---- Intelligence layer (blueprint Phase 6) ----
    "crates/secureops-tokenbudget", # LLM context packing: knapsack + dedup/schema-ref/diff/map-reduce
    "crates/secureops-graph",       # security knowledge graph: typed edges, attack-path Dijkstra, blast radius
    "crates/secureops-bughunt",     # bounded agentic LLM bug-hunt loop + strict-JSON FindingReport
    # ---- Autonomy (blueprint Phase 7) ----
    "crates/secureops-rl",          # LinUCB finding ranking (Sherman-Morrison online update, NDCG/Precision)
    "crates/secureops-selfheal",    # YAML self-healing playbooks: safe/reversible/destructive + HITL + circuit breaker
    # ---- Enterprise (blueprint Phase 8) ----
    "crates/secureops-license-server", # stateless Ed25519 license heartbeat/revoke server
    # ---- Hardening + GA (blueprint Phase 9) ----
    "crates/secureops-chaos",          # controlled-failure drills (Postgres/Redis/LLM/license/MinIO)
    "crates/secureops-bench",          # criterion perf benchmarks (graph BFS, token packing, RL)
]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Adversa AI <https://adversa.ai>"]
repository = "https://github.com/aryasoni98/secureops"
homepage = "https://github.com/aryasoni98/secureops#readme"

# Centralized dependency versions. Members opt in with `dep.workspace = true`,
# so the whole tree shares one version per crate. Heavy Ring-2-specific deps
# (wasmtime, aya, hyper, rustls, regorus, etc.) are declared per-crate as
# commented TODOs in each scaffold so the workspace stays fast to build until
# those phases land.
[workspace.dependencies]
secureops-core = { path = "crates/secureops-core", version = "0.0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "signal", "time"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
regex = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
getrandom = "0.4"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
