[package]
name = "secureops-api"
description = "SecureOps platform HTTP API: axum REST + WebSocket, Ed25519 license activation, JWT/API-key auth, Cedar tier gating, Postgres/Redis-backed store (PRODUCT.md Phase 5)."
version.workspace = true
edition.workspace = true
# Platform tier requires a newer toolchain than the 1.80 core (axum 0.8 / cedar 4
# / `Option::is_none_or`). The host-local crates keep MSRV 1.80.
rust-version = "1.82"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "secureops-api"
path = "src/main.rs"

[dependencies]
# Reuse the frozen core contract (Severity, now_iso) for wire consistency.
secureops-core = { workspace = true }
# Intelligence + autonomy engines (Phase 6b/7b wiring). All pure-Rust, cc-safe.
secureops-graph = { path = "../secureops-graph", version = "0.0.1" }
secureops-tokenbudget = { path = "../secureops-tokenbudget", version = "0.0.1" }
secureops-bughunt = { path = "../secureops-bughunt", version = "0.0.1" }
secureops-rl = { path = "../secureops-rl", version = "0.0.1" }
secureops-selfheal = { path = "../secureops-selfheal", version = "0.0.1" }

# Shared workspace deps.
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
sha2 = { workspace = true }

# HTTP stack.
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth + licensing.
jsonwebtoken = "9"
cedar-policy = "4"
ed25519-dalek = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }

# OpenAPI.
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }

# Storage (5b). tokio-postgres (pure-Rust wire protocol, NO sqlite/C transitive,
# so no cc-cap clash with intel's tree-sitter — unlike sqlx, which force-pulls
# sqlx-sqlite). No TLS feature → no ring/cc. deadpool-* for connection pooling.
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
deadpool-redis = "0.18"
# SigV4 presigning for S3/MinIO evidence URLs (pure Rust; no aws-sdk → no cc).
hmac = "0.12"
hex = "0.4"
# Stored-only ZIP for signed incident-report exports (default features off → no
# bzip2/zstd/lzma C deps → cc-safe). Ed25519 signing reuses the existing dep.
zip = { version = "2", default-features = false }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
