[package]
name = "secureops-bpf"
description = "SecureOps kernel PEP: syscall/egress correlation; Linux aya CO-RE + LSM-BPF, macOS Endpoint Security fallback (PRODUCT.md B.6)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core.workspace = true
anyhow.workspace = true
serde = { workspace = true }      # seccomp profile serialization (OCI JSON)
serde_json = { workspace = true } # seccomp profile JSON emit
# `mock` feature only: in-memory demo SyscallEvent stream for kernel-free tests.
tokio = { workspace = true, optional = true }

[features]
# Linux aya CO-RE eBPF loader (kernel hooks). OFF by default: the default build
# provides the cross-platform dispatcher + the (kernel-free) chain correlator and
# seccomp generator only. Enable with `--features ebpf` on Linux once the
# secureops-ebpf programs are built.
ebpf = ["dep:aya"]
# Kernel-free demo event source (any OS) so the daemon's chain wiring can be
# exercised end-to-end in tests / local runs without a kernel (PRODUCT.md B.6).
mock = ["dep:tokio"]

[target.'cfg(target_os = "linux")'.dependencies]
# Optional: only compiled when the `ebpf` feature is enabled (see [features]).
aya = { version = "0.13", default-features = false, optional = true }
# aya-log = "0.2"   # ring-buffer log plumbing (add when eBPF programs are built)

# macOS Endpoint Security is a system library (not crates.io); add a native link
# in build.rs when the entitlement is available.
