[package]
name = "secureops-checks"
description = "One Check impl per audit category - faithful targets for the 56 SC-* checks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
secureops-intel = { path = "../secureops-intel", version = "0.0.1" }   # IOC matchers + hash_string (ioc, supply_chain, memory_integrity)
secureops-fs = { path = "../secureops-fs", version = "0.0.1" }          # probe_port for gateway --deep + RealAuditContext in tests
async-trait = { workspace = true }
regex = { workspace = true }                            # API-key / injection / dangerous-skill pattern matching

[dev-dependencies]
tokio = { workspace = true }
