[package]
name = "secureops-core"
description = "SecureOps shared core: types, Check/AuditContext traits, scoring. No I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }

[dev-dependencies]
tokio.workspace = true
