[package]
name = "secureops-crypto"
description = "SecureOps keystore crypto: AES-GCM + Argon2id, v1-readable; OS keychain/TPM signing keys."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
getrandom = { workspace = true }   # OS CSPRNG for generate_token (ports crypto.randomBytes)
aes-gcm = "0.10"                   # AES-256-GCM (ports node aes-256-gcm)
pbkdf2 = "0.12"                    # PBKDF2 key derivation (ports crypto.pbkdf2Sync)
hmac = "0.12"                      # HMAC-SHA512 for PBKDF2
sha2 = { workspace = true }        # SHA-512 PRF
tokio = { workspace = true }       # async file I/O for ensure_keystore / encrypt_file

argon2 = "0.5"         # Argon2id KDF: passphrase -> 256-bit key (v2 keystore format)
zeroize = "1"          # wipe derived keys / plaintext secrets from memory on drop
keyring = "3"          # OS keychain (macOS Keychain / Windows Credential Manager / libsecret)
ed25519-dalek = "2"    # signing key for KeychainSigner

# ---- Future heavy deps (TPM) ----
# tss-esapi = "7"       # TPM 2.0 / Secure Enclave-backed signing keys (Linux fleets)

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7"
