[package]
name = "secureops-crypto"
description = "SecureOps keystore crypto: AES-GCM + Argon2id, v1-readable; OS keychain/TPM signing keys."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
secureops-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
getrandom = { workspace = true }   # OS CSPRNG for generate_token (ports crypto.randomBytes)
aes-gcm = "0.10"                   # AES-256-GCM (ports node aes-256-gcm)
pbkdf2 = "0.12"                    # PBKDF2-HMAC-SHA512 (ports crypto.pbkdf2Sync); pulls hmac internally
sha2 = { workspace = true }        # SHA-512 PRF
tokio = { workspace = true }       # async file I/O for ensure_keystore / encrypt_file

argon2 = "0.5"         # Argon2id KDF: passphrase -> 256-bit key (v2 keystore format)
zeroize = "1"          # wipe derived keys / plaintext secrets from memory on drop
keyring = "3"          # OS keychain (macOS Keychain / Windows Credential Manager / libsecret)
ed25519-dalek = "2"    # signing key for KeychainSigner

[features]
# TPM 2.0 / Secure Enclave signing backend (Linux fleets). OFF by default:
# tss-esapi links the system TSS stack (libtss2-dev), which is absent on most
# build hosts / CI / `cargo install` environments. The default signing path is
# keychain-backed (KeychainSigner) and needs none of this. Enable with
# `--features tpm` on a host that has the TSS libraries.
tpm = ["dep:tss-esapi"]

[target.'cfg(target_os = "linux")'.dependencies]
# Optional: only compiled when the `tpm` feature is enabled (see [features]).
tss-esapi = { version = "7", optional = true }
