[package]
name = "secureops-daemon"
description = "SecureOps Ring-2 root-of-trust daemon: wires the PDP + all PEPs (proxy/sinkhole/eBPF/sandbox) + AlertBus + signed audit log."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "secureops-daemon"
path = "src/main.rs"

[dependencies]
# Frozen core contract (types / traits / scoring; no I/O) — PRODUCT.md A.4.
secureops-core = { workspace = true }
secureops-fs = { path = "../secureops-fs", version = "0.0.1" }             # kill-switch check (B.4 step 1)
secureops-intel = { path = "../secureops-intel", version = "0.0.1" }       # IOC db for the skill monitor

# Allowed shared workspace deps.
tokio = { workspace = true }
anyhow = { workspace = true }

# ---- Ring-2 sibling crates the daemon currently wires (PRODUCT.md A.2 / A.4 / B.4) ----
# Phase-2 slice: monitors + AlertBus + circuit breaker, plus the egress proxy PEP.
secureops-proxy = { path = "../secureops-proxy", version = "0.0.1" }       # egress PEP — forward proxy + DNS sinkhole
secureops-monitors = { path = "../secureops-monitors", version = "0.0.1" } # tokio monitors, AlertBus, SQLite, circuit breaker
secureops-bpf = { path = "../secureops-bpf", version = "0.0.1" }           # kernel PEP — exfil-chain correlator (P4, light by default)
# Phase-4 PEPs/PDP (policy, sandbox, auditlog, ipc) are not wired into the
# daemon yet; re-add their path-deps here when their startup wiring lands so the
# daemon build doesn't drag wasmtime/regorus/cedar/etc. until then.

[features]
# Inject a synthetic exfil chain through the kernel-PEP wiring on any OS (no
# kernel) so the daemon's chain detection can be demoed/tested end-to-end.
mock = ["secureops-bpf/mock"]
# Linux aya CO-RE kernel hooks (attaches openat/connect/execve tracepoints).
ebpf = ["secureops-bpf/ebpf"]

# ---- Heavy deps the real daemon impl will pull in (Phase 4) — kept commented so the
# ---- workspace stays offline-fast/green until this phase lands (PRODUCT.md Part G). ----
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # structured log output / startup banner sink
# opentelemetry = "0.27"     # optional OTel export of AlertBus events (PRODUCT.md tier: enterprise)
# Note: the daemon itself adds no new heavy crates — the wasmtime/aya/hyper/rustls/
# hickory/rusqlite/ed25519/keyring/tss-esapi deps live (commented) in the sibling
# crates above; the daemon only orchestrates their public APIs.

[dev-dependencies]
tokio = { workspace = true }
